tests/NormalTests/paczka1/small_fuzzy/56856165.err
Error in line 6: hMp S338 33,2
Error in line 8: BkDRdrtSbqi S219 65,8
